Quartz sync: Jun 28, 2024, 6:32 PM

--- a/content/Игры/Врата Бальдура/Хроники Врат Бальдура.md
+++ b/content/Игры/Врата Бальдура/Хроники Врат Бальдура.md
@@ -1,12 +1,24 @@
 
-
-```dataview
-Table date AS "Дата игры", fc-date AS "Дата в игре",characters as "Участники", location as "Локации" 
-From "Игры/Врата Бальдура/Хроники"
-SORT sessionNum asc
-```
-
-
-# Краткая сводка
-
-> *[[День 4. Падение псевдо-капитана|Следующая сессия]]*
+|Навзание|Дата игры|Дата в игре|Участники|Локации|
+|---|---|---|---|---|
+|[[День 1. Возрождение]]|23.03.2023|- year: 1483<br>- month: 1<br>- day: 1|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Джарлакс]]<br>- [[Коран]]|- [[Врата Бальдура]]|
+|[[День 2. Путешествие по планам]]|16.04.2023|- year: 1483<br>- month: 1<br>- day: 2|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- Феи<br>- [[Коран]]|- [[Врата Бальдура]]<br>- [[Верхний город]]<br>- План теней<br>- План фей|
+|[[День 3. Загадочная миска, Баал и суматоха]]|25.06.2023|- year: 1483<br>- month: 1<br>- day: 3|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баал]]<br>- [[Баст]]<br>- [[Коран]]|- [[Врата Бальдура]]<br>- [[Верхний город]]<br>- [[Внешний город]].md)|
+|[[День 4. Встреча с мистером Печенькой]]|15.07.2023|- year: 1483<br>- month: 1<br>- day: 4|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Мистер Печенька]]|- [[Врата Бальдура]]<br>- Таверна "Потрошитель"<br>- Порт|
+|[[День 4. Падение псевдо-капитана]]|22.07.2023|- year: 1483<br>- month: 1<br>- day: 4|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баст]]<br>- [[Уильям Орнест]]|- Корабль|
+|[[День 4. Убийство дворфийки и уборщика]]|04.08.2023|- year: 1483<br>- month: 1<br>- day: 4|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Уильям Орнест]]|- Корабль|
+|[[День 5. Пиратская засада]]|26.08.2023|- year: 1483<br>- month: 1<br>- day: 5|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- Капитан Хайден<br>- [[Баст]]<br>- [[Уильям Орнест]]|- Корабль<br>- Остров с храмом|
+|[[День 5. Освобождение из камня]]|09.02.2023|- year: 1483<br>- month: 1<br>- day: 5|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Уильям Орнест]]<br>- [[Баст]]<br>- [[Саррукх]]|- Храм юань-ти|
+|[[День 5. Заражение и новый дом]]|13.09.2023|- year: 1483<br>- month: 1<br>- day: 5|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баст]]|- [[Дом]]<br>- Остров с храмом<br>- Храм юань-ти|
+|[[День 5. Погоня и пустынный остров]]|19.09.2023|- year: 1483<br>- month: 1<br>- day: 5|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баст]]|- Остров на деми-плане|
+|[[День 6. Банкетный зал и мозги]]|21.09.2023|- year: 1483<br>- month: 1<br>- day: 6|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баст]]|- [[Дом]]<br>- Остров на деми-плане|
+|[[День 6. Материальный план и желания]]|11.11.2023|- year: 1483<br>- month: 1<br>- day: 6|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Баст]]|- Корабль<br>- Остров на деми-плане|
+|[[День 7. Корабль и возвращение к началу]]|18.11.2023|- year: 1483<br>- month: 1<br>- day: 7|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Джарлакс]]<br>- [[Коран]]|- [[Врата Бальдура]]<br>- [[Нижний город]]<br>- Корабль "Аларика"<br>- Порт|
+|[[День 7. Привычная обстановка]]|12.02.2023|- year: 1483<br>- month: 1<br>- day: 7|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Джин]]<br>- [[Лили]]<br>- [[Дамар]]<br>- [[Фауст Кляйн]]<br>- [[Оллин Рахт]]<br>- [[Белинн Стелмейн]]<br>- [[Меллоу Квин]]<br>- [[Коран]]|- [[Врата Бальдура]]<br>- [[Верхний город]]<br>- [[Нижний город]]<br>- [[Внешний город]]<br>- Таверна "Потрошитель"<br>- Таверна "В слюни и сопли"<br>- Дом Дамара и Руб<br>- Усадьба Корана<br>- Поместье Стелмейн<br>- Особняк Кляйн|
+|[[День 8. Сбор у Корана]]|16.12.2023|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Джарлакс]]<br>- [[Коран]]<br>- [[Оллин Рахт]]<br>- [[Таламра Вантампур]]<br>- [[Фауст Кляйн]]|- [[Врата Бальдура]]<br>- [[Верхний город]]<br>- [[Внешний город]]<br>- [[Нижний город]]<br>- Дом Дамара и Руб<br>- Усадьба Корана<br>- Поместье Стелмейн<br>- Особняк Кляйн<br>- [[Поместье Рейвентри]]|
+|[[День 8. Дом с призраками]]|30.12.2023|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Перриус Аннматар]]|- [[Поместье Рейвентри]]|
+|[[День 8. Особняк на плане фей]]|08.03.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Уск]]|- [[Поместье Рейвентри]]<br>- План фей|
+|[[День 8. Сатиры, Повариха и Библиотека]]|22.03.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Красная повариха]]<br>- [[Сэдия]]<br>- Сатиры|- [[Поместье Рейвентри]]<br>- План фей|
+|[[День 8. Ссора карги и русалки]]|05.04.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- [[Стуктина]]<br>- [[Эрнива]]<br>- Спрайты|- [[Поместье Рейвентри]]<br>- План фей|
+|[[День 8. Новая фея и злость Поварихи]]|15.06.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- [[Шамбли]]<br>- [[Красная повариха]]<br>- Сатиры<br>- Спрайты|- [[Поместье Рейвентри]]<br>- План фей|
+|[[День 8. 50 лет спустя]]|23.06.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- Спрайты|- [[Поместье Рейвентри]]<br>- [[Врата Бальдура]]<br>- [[Нижний город]]<br>- План фей<br>- Материальный план|
