--- a/content/Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md
@@ -28,13 +28,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 1. Возрождение]]
 
 
 # Краткая сводка
@@ -42,7 +36,7 @@ Limit 1
 
 После пробуждения мы заметили, что стало тихо. Даже слишком. Корана нигде не было видно и в остальном казалось, будто время остановилось. Попытки подтвердить это увенчались успехом. Основное предположение - мы на теневом плане 
 
-При исследовании города и уничтожении фонтана ~~(к ужасу Мирай)~~  мы попали в канализации. Там был лишь змей. Ни без труда, он был побеждён (Руб пришла на помощь ~~под конец после лутания~~ как истинный герой и спасла ситуацию). Когда разбирали полёт, выяснилось как мы вообще тут оказались: похищенная Руб книга, что была забрана Мирай.
+При исследовании города и уничтожении фонтана ~~~~  мы попали в канализации. Там был лишь змей. Ни без труда, он был побеждён . Когда разбирали полёт, выяснилось как мы вообще тут оказались: похищенная Руб книга, что была забрана Мирай.
 Она попыталась её вновь использовать
 
 
@@ -50,10 +44,5 @@ Limit 1
 - Тори стала Вик Гральт
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+> Следующая сессия: [[День 3. Загадочная миска, Баал и суматоха]] 
