--- a/content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md
@@ -13,7 +13,7 @@ fc-display-name: Загадочная миска, Баал и суматоха
 location:
   - "[[Врата Бальдура]]"
   - "[[Верхний город]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город |Внешний город]]"
 characters:
   - "[[Гайдо Алигьери]]"
   - "[[Ксандр]]"
@@ -25,25 +25,9 @@ characters:
   - "[[Коран]]"
 cssclasses: dvl-c
 ---
-
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
-
+>Предыдущая сессия: [[День 2. Путешествие по планам]] 
 
 
 # Краткая сводка
-
-
-
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+> Следующая сессия: [[День 4. Встреча с мистером Печенькой]] 
