--- a/content/Игры/Врата Бальдура/Хроники/День 4. Встреча с мистером Печенькой.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Встреча с мистером Печенькой.md
@@ -24,23 +24,12 @@ characters:
 cssclasses: dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+>  Предыдущая сессия: [[День 3. Загадочная миска, Баал и суматоха]] 
 
 
 
 # Краткая сводка
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+> Следующая сессия: [[День 4. Падение псевдо-капитана]] 
