--- a/content/Игры/Врата Бальдура/Хроники/День 4. Убийство дворфийки и уборщика.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Убийство дворфийки и уборщика.md
@@ -23,13 +23,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 4. Падение псевдо-капитана]] 
 
 
 # Краткая сводка
@@ -49,10 +43,5 @@ Limit 1
 На том и разошлись по картам, оставив Тори разбираться с трупом самой.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 5. Пиратская засада]] 
