--- a/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
@@ -25,13 +25,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 5. Освобождение из камня]] 
 
 
 # Краткая сводка
@@ -41,15 +35,10 @@ Limit 1
 Озадаченные тем, как выйти мы продолжили осматриваться. Понять даже близко, кому принадлежит особняк было сложно. Разве что на гобелене был тот же символы, что и на гербе.  Чуть позже, Гайдо заметил, что текст [[Письмо дома №2|письма]] обновился. И после выйдя через дверь, мы оказались на том же месте в храме. 
 
 От [[Акили Баст|Баст]] мы узнали, что времени совершенно не прошло - разве что саррукх уже успел уйти. Но "Путеводную звезду" он оставил.
-Выйдя из храма мы разделились - [[Акили Баст|Баст]] и Ксандр пошли охотиться, Руб и Мирай (с Гайдо в кольце) к кораблю, Тори пошла искать травы.
+Выйдя из храма мы разделились - [[Акили Баст|Баст]] и Ксандр пошли охотиться, Руб и Мирай  к кораблю, Тори пошла искать травы.
 
 Когда Тори закончила сбор и вернулась к кораблю, она решила слегка осмотреть берег. И нашла рыбу. С личинкой. Который успешно попал внутрь Тори. Одно задание - отравить и тем самым убить союзника. Тори ругаясь это выполнила - убила ветку. Вернувшись Мирай узнала о ситуации и сразу приняла меры - сильно вскипятив мозги Тори. Руб в это время паниковала. Однако способ Мирай помог и личинка покинула нового носителя. Добив насекомое перед ними внезапно появились Ксандр и [[Акили Баст|Баст]], требующие драпать.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 5. Погоня и пустынный остров]] 
