--- a/content/Игры/Врата Бальдура/Хроники/День 5. Освобождение из камня.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Освобождение из камня.md
@@ -25,13 +25,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 5. Пиратская засада]] 
 
 
 # Краткая сводка
@@ -58,10 +52,5 @@ Limit 1
 Новый текст [[Первое задание из печенья|знамения]].
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 5. Заражение и новый дом]] 
