--- a/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
@@ -25,13 +25,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 4. Убийство дворфийки и уборщика]] 
 
 
 # Краткая сводка
@@ -43,10 +37,5 @@ Limit 1
 Остальные в это время уже всё спланировали и спокойно сражались с бедными пиратами. Стойко стояли правда лишь двое - чародей и сам капитан. Остальные по возможность разбежались вспять. Ну, с ними довольно быстро разобрались, причём без особых проблем. И обсудив дальнейшие действия Уильяма, разошлись.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 5. Освобождение из камня]] 
