--- a/content/Игры/Врата Бальдура/Хроники/День 5. Погоня и пустынный остров.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Погоня и пустынный остров.md
@@ -23,13 +23,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 5. Заражение и новый дом]] 
 
 
 # Краткая сводка
@@ -44,10 +38,5 @@ Limit 1
 Закончив исследование, все вернулись в жилую хижину. [[Акили Баст|Баст]] и Ксандр принялись за готовку. Руб отдыхала. Мирай, Ксандр и Гайдо немного побеседовали. Похлёбка Тори возымела неожиданный эффект, вызывающий сильный аппетит, так что еда была быстро съедена. В остальном, довольн спокойный вечер.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 6. Банкетный зал и мозги]] 
