--- a/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
@@ -24,13 +24,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 5. Погоня и пустынный остров]] 
 
 
 # Краткая сводка
@@ -45,16 +39,11 @@ Limit 1
 
 В определенный момент Мирай чуть было потеряла сознание после прилетевшего по ней психического урона от существа, но Тори быстро поставила её на ноги и за что сама схлопотала. Тори это сильно выбесило, а Мирай попыталась связаться с существом и узнала о шкатулке в нём. 
 
-Справившись с врагом, Мирай предупредила о шкатулке остальных и после небольшой соры она была вытащена. (Тори сначала  хотела воспользоваться кинжалом Баала, но не смогла. Руб х, увеличенная в размерах, полезла раздирать существо, но была остановлена Тори и лежала некое время в отключке.) Гайдо увидев, что Мирай вроде и чувствует себя со стороны нормально, но ведёт себя явно не совсем адекватно, использует на ней заклинание. Мирай явно стало лучше, однако она попросила потом уделить ей время тет-а-тет. 
+Справившись с врагом, Мирай предупредила о шкатулке остальных и после небольшой соры она была вытащена.  Гайдо увидев, что Мирай вроде и чувствует себя со стороны нормально, но ведёт себя явно не совсем адекватно, использует на ней заклинание. Мирай явно стало лучше, однако она попросила потом уделить ей время тет-а-тет. 
 
 Исследовав шкатулку там было лишь одно [[Письмо из Муншая|письмо]] с печатью Муншая. Заинтересованный Гайдо сразу прочитал его, настроение сразу испортилось. 
 После он пошёл крушить деревья, а Мирай аккуртано последовала за ним.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 6. Материальный план и желания]] 
