--- a/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
@@ -23,13 +23,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 6. Банкетный зал и мозги]] 
 
 
 # Краткая сводка
@@ -48,10 +42,5 @@ Limit 1
 
 После все, кроме Мирай, разошлись.
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 7. Корабль и возвращение к началу]] 
