--- a/content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md
@@ -12,7 +12,7 @@ fc-date:
 fc-display-name: Корабль и возвращение к началу
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город |Нижний город]]"
   - Корабль "Аларика"
   - Порт
 characters:
@@ -27,13 +27,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 6. Материальный план и желания]] 
 
 
 # Краткая сводка
@@ -47,10 +41,5 @@ Limit 1
 Когда мы ступили на землю, нас уже встречал Коран. Хоть и явно недовольный своим положением, он "добродушно встретил давнего знакомого" в лице Гайдо, Мирай же продолжил до стен Верхнего города, где они разминулись. Руб и Ксандр же пошли другой дорожкой - к ней домой. 
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 7. Привычная обстановка]] 
