--- a/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
@@ -13,7 +13,7 @@ fc-display-name: 50 лет спустя
 location:
   - "[[Поместье Рейвентри]]"
   - "[[Врата Бальдура]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город |Нижний город]]"
   - План фей
   - Материальный план
 characters:
@@ -28,13 +28,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Новая фея и злость Поварихи]] 
 
 
 # Краткая сводка
