--- a/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
@@ -23,13 +23,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Сбор у Корана]] 
 
 
 # Краткая сводка
@@ -38,7 +32,7 @@ Limit 1
 
 *Прочитали **Мирай**, **Руб** и **Тори**:* Поместье Рейвентри.
 
-	**Мирай** сложно ориентироваться, так как она не чувствует вещи в дали от неё (чувство вибрации отсутствует). 
+	**Мирай** сложно ориентироваться, так как она не чувствует вещи в дали от неё . 
 
 В главной зале лежит большая люстра, там же **Тори** нашла гостевую книгу.
 
@@ -49,14 +43,14 @@ Limit 1
 	Мирай узнаёт, что он в маске.
 	Мирай понимает, что это призрак со слов Руб.
 
-[[Перриус Аннматар|Перриус]] обиделся на Руб (она его оскорбила тем, что грубо отозвалась плохо о призраках и о нём конкретно).
+[[Перриус Аннматар|Перриус]] обиделся на Руб .
 
 В гардеробной на Гайдо напала одежда. Инициатива.
 
 Гайдо пытался сжечь было мебель, но Мирай его останавливает. Гайдо пытается связаться с джином выйдя из здания, однако связь плохая. 
 Мирай пытается донести, что Гайдо тоже интересно это исследование. Ксандр выбивает дверь в комнату с роялем
 
-Рядом в комнате с роялем танцуют призраки и играю музыка (Мирай не видит призраков, энергия слишком слаба). Рояль сломан.
+Рядом в комнате с роялем танцуют призраки и играю музыка . Рояль сломан.
 
 Гайдо предлагает Мирай танец, чтобы посмотреть на реакцию призраков. Мирай соглашается
 
@@ -106,13 +100,8 @@ Limit 1
 
 В конце комнаты увидела следы, будто вьевшиеся в пол. Похоже на излучение. 
 
-Чуть после - шум. В воздухе материальнуются два духа, настроенные явно враждебно. Мирай начинает чертить портал, пока остальные пытаются отбиться. Когда призраки начали прижимать, портал расширился и темноволосый эльф попросил всех быстро залезать в портал. Портал быстро менялся цветами между зелёным и фиолетовым (Мирай поняла, что это план теней и план фей). Руб затащила Гайдо в отключке, после запрыгнула Тори. Потом Мирай, всё же понимая, что не успеет закончить круг, втолкнула Ксандра, что готов был стоять там до последнего. Таким образом, все быстро забежали в зелёный.
+Чуть после - шум. В воздухе материальнуются два духа, настроенные явно враждебно. Мирай начинает чертить портал, пока остальные пытаются отбиться. Когда призраки начали прижимать, портал расширился и темноволосый эльф попросил всех быстро залезать в портал. Портал быстро менялся цветами между зелёным и фиолетовым . Руб затащила Гайдо в отключке, после запрыгнула Тори. Потом Мирай, всё же понимая, что не успеет закончить круг, втолкнула Ксандра, что готов был стоять там до последнего. Таким образом, все быстро забежали в зелёный.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 8. Особняк на плане фей]] 
