--- a/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
@@ -28,13 +28,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Ссора карги и русалки]] 
 
 
 # Краткая сводка
@@ -265,10 +259,5 @@ Limit 1
 В итоге, решают продолжить игру, но если все будут согласны.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 8. 50 лет спустя]] 
