--- a/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
@@ -24,13 +24,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Дом с призраками]] 
 
 
 # Краткая сводка
@@ -43,7 +37,7 @@ Limit 1
 
 Коротко: мы находимся в доме семьи Корвинаров, поместье Рейвентри. Это место - отражение настоящего поместья. Нас атаковали арканные духи, результат слияния необработанной магии с теневым планом. Леди [[Элсиет Колвинар]] находится с [[Кернерос|чемпионом]].
  [[Дарриус Колвинар|Дарриуса]] здесь нет. Большинство гостей мертвы или застряли между планами, как призраки на материальном плане.
-В особняке сейчас находятся: Элсиет, Красная повариха (карга), [[Сэдия]]. Рекомендуется поговорить с последней. Есть еще спрайты, обладающие заметным весом. Карга и штат поваров находятся на кухне. Не рекомендуется заходить в восточное крыло. Тори предложила уйти из этого дома, но Мирай отказалась, замечая, что возвращение с плана Фей - настоящая лотерея.*
+В особняке сейчас находятся: Элсиет, Красная повариха , [[Сэдия]]. Рекомендуется поговорить с последней. Есть еще спрайты, обладающие заметным весом. Карга и штат поваров находятся на кухне. Не рекомендуется заходить в восточное крыло. Тори предложила уйти из этого дома, но Мирай отказалась, замечая, что возвращение с плана Фей - настоящая лотерея.*
 
 Так как Гайдо ещё в начале диалога ушёл, чтобы связаться с феями, он проследовал в соседнюю комнату с большим деревом. Но связаться не вышло, так что он просто решил потренироваться с мечом. Под конец диалога с Уском, к нему присоединилась Руб о и отдыхала рядом с ним, наблюдая.
 Тори ушла вместе с Уском, дойдя до библиотеки, где было пишущее дерево.
@@ -57,10 +51,5 @@ Limit 1
 Ксандр и Мирай решают пойти на второй этаж, а Руб и Гайдо чуть ранее решили сходить на кухню и перекусить.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 8. Сатиры, Повариха и Библиотека]] 
