--- a/content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md
@@ -26,13 +26,7 @@ cssclasses:
   - dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Особняк на плане фей]]
 
 
 # Краткая сводка
@@ -115,10 +109,5 @@ Limit 1
 Так же у спрайтов были планы на тему корги.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+> Следующая сессия: [[День 8. Ссора карги и русалки]]
