--- a/content/Игры/Врата Бальдура/Хроники/День 8. Ссора карги и русалки.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Ссора карги и русалки.md
@@ -26,13 +26,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-```dataview
-LIST without ID "*Предыдущая сессия*: *" + file.link + "*"
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 8. Сатиры, Повариха и Библиотека]] 
 
 
 # Краткая сводка
@@ -73,7 +67,7 @@ Limit 1
 По итогу, когда пришла Тори и надавила на русалку, у той сдали нервы и она признаёт что сама прокляла [[Эрнива|Эрниву]]. Вот и не хотела сферу отдавать. 
 
 #### Возвращение к Сэдии 
-Пытаясь не усиливать конфликт, все пошли к [[Сэдия|Сэдии]]. Гайдо помог донести [[Эрнива|Эрниву]], пока остальные держали [[Стуктина|Стуктину]] на расстоянии. Русалка просит помощи у сенешали в снятии проклятия. В качестве благодарности русалка отдала перстень(создаёт молнии, забрал Гайдо) и веер (создаваёт ветер, забрала Руб).
+Пытаясь не усиливать конфликт, все пошли к [[Сэдия|Сэдии]]. Гайдо помог донести [[Эрнива|Эрниву]], пока остальные держали [[Стуктина|Стуктину]] на расстоянии. Русалка просит помощи у сенешали в снятии проклятия. В качестве благодарности русалка отдала перстень и веер .
 
 Стуктина решила пойти в ближайший город, откуда она была родом. Гайдо взял на заметку откуда она и кто, да и дал информацию куда ей обратиться во Вратах. 
 
@@ -93,10 +87,5 @@ Limit 1
 Участники выпивают кубки с пивом и почти все в ауте, кроме, на удивление Руб.
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+>Следующая сессия: [[День 8. Новая фея и злость Поварихи]] 
