--- a/content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md
@@ -30,7 +30,7 @@ cssclasses:
 
 Однако мы смогли вернуться к жизни благодаря Джарлаксу. Естественно, не за бесплатно. В обмен на наши жизни мы должны были избавить город от иллитидов, выполняя различные задания. Неизвестно, сколько их будет и их сложность, но выбора у нас не было. Кроме возраждения, [[Джарлакс]] раздал нам [[Арканы|метки]], что должны будут помочь в нашем путешествии. Так же на нас было наложено заклинание - ближайшие дни нас не будет никто помнить. 
 
-Вернул он нас во [[Внешний город (заполнить)]], откуда мы должны были двигаться к нашему осведомителю в форме [[Коран|Корана]]. Все кроме Тори отправились по канализации, а мисс Кляйн надо было заскочить в пару мест в [[Нижний город (заполнить)|Нижнем городе]]. Когда же она решила встретиться с новыми "товарищами", по попытки пройти в [[Верхний город|Верхний город]] ей путь приградил [[Дозор]].
+Вернул он нас во [[Внешний город ]], откуда мы должны были двигаться к нашему осведомителю в форме [[Коран|Корана]]. Все кроме Тори отправились по канализации, а мисс Кляйн надо было заскочить в пару мест в [[Нижний город |Нижнем городе]]. Когда же она решила встретиться с новыми "товарищами", по попытки пройти в [[Верхний город|Верхний город]] ей путь приградил [[Дозор]].
 
 Таким образом, когда вся команда собралась таки, Тори успела побывать под арестом, Руб и Гайдо вместе принять ванну и напиться,  [[Ксандр]] наесться до отвала, а Мирай привести себя в порядок после ползанья по канализации. 
 
@@ -38,10 +38,5 @@ cssclasses:
 
 Больше существо не вставало и все наконец разошлись по комнатам, правда не напрямую. Все девушки зашли к Корану чтобы узнать, что вообще за чертовщина происходит. Руб стоила по пути книжонку из его кабинета, а Коран тщательно писал обещанный Мирай доклад.
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+--- 
+> Следующая сессия: [[День 2. Путешествие по планам]]
