--- a/content/Игры/Врата Бальдура/Хроники/День 4. Падение псевдо-капитана.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Падение псевдо-капитана.md
@@ -23,13 +23,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-```dataview
-LIST without ID "Предыдущая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum < this.sessionNum
-SORT sessionNum desc
-Limit 1
-```
+> Предыдущая сессия: [[День 4. Встреча с мистером Печенькой]] 
 
 
 # Краткая сводка
@@ -61,10 +55,5 @@ Limit 1
 Остальные же начали подготовку к своему плану....
 
 
-```dataview
-LIST without ID "Следующая сессия: " + file.link
-From "Игры/Врата Бальдура/Хроники" 
-WHERE sessionNum > this.sessionNum
-SORT sessionNum asc
-Limit 1
-```
+---
+> Следующая сессия: [[День 4. Убийство дворфийки и уборщика]] 
