Quartz sync: Jun 29, 2024, 5:52 PM

--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md
@@ -7,8 +7,9 @@ location:
   - "[[Врата Бальдура]]"
   - "[[Внешний город (заполнить)|Внешний город]]"
 gender: М
-race: Аасимар
-organisation: "[[Команда Врат Бальдура]]"
+race:
+  - Аасимар
+organisation: []
 ---
 
 Отец: Халдей Грокс
