--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
@@ -7,8 +7,9 @@ location:
   - Амн
   - "[[Врата Бальдура]]"
 gender: М
-race: Полуэльф
-organisation: "[[Команда Врат Бальдура]]"
+race:
+  - Полуэльф
+organisation: []
 ---
 Личность из Амна. До событий Хаммера 1483, пребывал в организации [[Легион Смерти]]. 
 
