--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
@@ -4,9 +4,9 @@ location:
   - "[[Внешний город (заполнить)|Внешний город]]"
   - "[[Врата Бальдура]]"
 gender: Ж
-race: Эльф
-organisation: 
-- "[[Гильдия]]"
-- "[[Команда Врат Бальдура]]"
+race:
+  - Эльф
+organisation:
+  - "[[Гильдия]]"
 ---
 Раньше работала на [[Мистер Печенька|Мистера Печеньку]], сейчас на [[Джарлакс|Джарлакса]].
