--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md
@@ -8,8 +8,7 @@ location:
 gender: Ж
 race:
   - Порчекровный
-organisation:
-  - "[[Команда Врат Бальдура]]"
+organisation: []
 ---
 Дочь [[Фауст Кляйн|Фауста Кляйн]] и [[Маргарита Кляйн|Маргариты Кляйн]]. Судя по всему, имеет давнюю связь с [[Баал|Баалом]]
 
