--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
@@ -6,8 +6,9 @@ location:
   - "[[Верхний город]]"
   - "[[Врата Бальдура]]"
 gender: Ж
-race: Человек
-organisation: "[[Команда Врат Бальдура]]"
+race:
+  - Человек
+organisation: []
 ---
 
 Дочь [[Белинн Стелмейн]]. В последние пару лет часто заменяла её. Не столь давно [[Смерть Мирай|умерла]] и теперь работает на [[Джарлакс|Джарлакса]].
