--- a/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
@@ -32,14 +32,13 @@ cssclasses:
 
 
 # Краткая сводка
-### Вечеринка у сатиров
-Руб и Гайдо как только залетели в зал к сатирам, им сразу налили. Ток сделав глоток он уже почувствовали себя сатирами и взялись за музыкальные инструменты. 
 
-Ксандр выпивает бочку целебного зелья, и ему становится физически чуть получше, однако он всё ещё выпил целую бочку.
-Гайдо отметил, что не хватает представительниц прекрасного пола, и вот уже появились сатиры и более женственные. 
+# Полная сводка
+### Вечеринка у сатиров
+Руб и Гайдо как только залетели в зал к сатирам, им сразу налили. Ток сделав глоток они уже почувствовали себя сатирами и взялись за музыкальные инструменты. Ксандр выпивает бочку целебного зелья, и ему становится физически чуть получше, однако он всё ещё выпил целую бочку непонятной бодяги от сатиров. Гайдо отметил, что не хватает представительниц "прекрасного пола", и тут же появились сатиры ... более женственные. 
 
 Руб смогла направить подпитого Ксандра в пляс, наслаждаясь весельем и атмосферой.
-Правда спустя время Ксандр чуток осознал, где он находится и пытается вывести Гайдо из состояния опьянения, даже чуток успешно, по лишь немного. 
+Правда спустя время Ксандр чуток осознал, где он находится и пытается вывести Гайдо из состояния опьянения, относительно успешно. 
 Ксандр пытается уворачиваться от объятий Гайды, но безуспешно. Тут же к ним присоединяется и Руб, тут Ксандр уже смог всех от себя оттолкнуть.
 
 Руб потихоньку становится всё лучше и тут ей предлагают выпить что-то новенькое и  выпивает содержимое бутылки с не очень крепким алкоголем. У неё меняется ее восприятие и восприятие окружающих.
@@ -47,217 +46,35 @@ cssclasses:
 
 Гайдо уже успел пожелать чтоб сатиры исчезли, так что у него только музыка играла.
 
-Ксандр, помня о задаче попросил чтоб сатиры удалились. Сатиры чуть подались, но всё же показали документик. А там прописано, что они могут оставаться на неопределенный срок. 
-
-Тут как раз зашла Мирай и ей сразу передали документ на рассмотрение. Сначала сатиры не хотят отпускать Мирай, ведь она не пила с ними, но Гайдо, наконец вспомнивший про козлоногий, уговаривает их отпустить. Документ сразу исчезает и все идут к Сэдии.
+Ксандр, помня о задаче попросил чтоб сатиры удалились. Сатиры чуть побадались, но всё же показали документик. А там прописано, что они могут оставаться на неопределенный срок. Тут как раз зашла Мирай и ей сразу передали документ на рассмотрение. Сначала сатиры не хотели отпускать Мирай, ведь она не пила с ними, но Гайдо, наконец вспомнивший про козлоногих, уговаривает всех отпустить. Когда все вышло, документ сразу исчезает. Тем не менее, все идут к [[Сэдия|Сэдии]].
 
 ### Тори
-Героиня исследует галерею, где находятся разные предметы, включая статуэтки жаб, которые могут быть ядовитыми.
-Она пытается определить, являются ли они одинаковыми или разными, и пытается понять, знает ли она их.
+Тори находит галерею, где находятся многое, но сразу цеплялись за глаза статуэтки жаб. Они тут были повсюду.
+Тут же она находит зеркало, вероятно являющееся порталом на теневой план.
+В процессе осмотра Тори ощутила множество взглядов на себе. Кто следит и как давно - не ясно.
 
-Зеркало и глаза
-Героиня обнаруживает зеркало, которое может быть порталом на теневой план.
-Она замечает глаза, которые следят за ней, и пытается понять, чьи они могут быть.
+Продолжая осмотр особняка, она находит ухоженный сад и пруд. Растения в саду выглядят гигантскими, но не агрессивными на первый взгляд, но именно тут и находится [[Шамбли]].
 
-Слежка и общение
-Героиня обсуждает возможность слежки за ней и другими персонажами.
-Она также обнимает свою подругу, демонстрируя свою привязанность к ней.
+Тори пытается погладить его, но он атакует ее своими ветками. Немного пригрозив растению, она начала пытаться примерно определить, на сколько далеко она может от него стоять, чтобы её не задело. По итогу это превращается в игру в "догонялки", где когда Тори отходила слишком далеко, она его переставала интересовать. 
 
-Исследование особняка
-Героиня исследует особняк, где она видит ухоженный сад и пруд.
-Она замечает, что растения в саду выглядят гигантскими и не агрессивными.
-Она берет воду из пруда и проводит с ней различные эксперименты.
+Проблема Тори в том, что она была слишком поглощена процессом и [[Шамбли]] по итогу её схватил, хоть и ненадолго. Игры закончились, Тори решила просто приказать заклинанием [[Шамбли|шаркуну]] уйти...что сработало. Однако не известно, насколько долго он не вернется. 
 
-Встреча с Шамбли
-Героиня встречает Шамбли, который оказывается растением.
-Она пытается погладить его, но он бьет ее ветками.
-Она пытается понять, как далеко он может бить и как быстро он может двигаться.
+Раны от [[Шамбли|шаркуна]] содержали немного эльфийской пыльцы и обладали эффектом, схожим с эффектом некоторых наркотиков, так что она быстро, но аккуратно обрабатывает их. 
 
-Возвращение к Шамбли
-Героиня возвращается к Шамбли и угрожает ему рассказать о его поведении.
-Шамбли телепортируется на свое место и продолжает медленно ползти к нему.
-Героиня играет с ним в догонялки и показывает ему, где обитают куропатки.
+В целом, пора обратно к [[Сэдия|Сэдии]].
 
-Догонялки с кустом
-Персонаж пытается убежать от куста, но куст не отстает.
-Персонаж закрывает дверь, но куст все равно остается в комнате.
+### Мирай,  Руб и Гайдо
 
-Испытание ловкости
-Персонаж просит испытание ловкости, но не может его выполнить.
-Куст пытается схватить персонажа, но тот вырывается.
+Мирай создаёт полную копию документа сатиров. Однако вопрос с Руб не решён. От нее явно даёт феями, что заметила и Мирай, а после Гайдо с помощью заклинания. Опьянение с него снимает, однако подходя, Мирай телепатически просит его не распространяться на тему того, что он почувствовал. От Мирай Гайдо  ощущает "чужеродность", хотя она явно всё ещё человек. Руб не может пока принять факт, что она стала другим существом. В любом случае стоит спросить у [[Сэдия|Сэдии]]. Руб неохотно, но идёт сама.
 
-Выгоняем шаркуна
-Героиня успешно выгоняет шаркуна из особняка, но не знает, насколько долго он не вернется.
-Героиня находит зеркало-портал на теневой план, но решает не рисковать.
+[[Сэдия]] и сама не уверена, что произошло с Руб, но связь с планом фей неоспорима. Руб же просто отрицает, что пила что-то у сатиров и все что она говорила тогда. Проблем от этого обращения не так много. Главная - связь с планом фей. Если она умрёт, вероятно её душа останется на этом плане.
 
-Раны и медицина
-Героиня обнаруживает, что ее раны от встречи с шаркуном обработаны эльфийской пыльцой, которая действует как наркотик.
-Героиня использует свою прокаченную медицину для обработки ран.
+Мирай предоставляет [[Сэдия|Сэдии]]. Если документ легален, то не факт, что сатиров в целом стоит выгонять. [[Сэдия]], просматривая, обьясняет, что в подобных приглашениях нельзя указывать точную дату, до которой нужно гостить. Это считается грубостью. Однако сатиры тоже явно переборщили с добродушием. Пока основная идея, как помогать сатиров - выкурить их, а это задача для Тори. 
 
-Разговор с гоблином
-Героиня и ее друзья обсуждают, что они должны делать дальше.
-Героиня решает пойти к мисс Кляйн, чтобы отчитаться о ситуации с шаркуном.
+### Повариха 
+ Возвращаясь обратно в гостевую комнату, все видят, что Тори уже успела вернуться. Она передаёт Гайдо корзинку с фруктами, наносит на него противоядие и объясняет что надо делать. Остальные просто отдыхают в этот момент, ибо сильно вымотаны.
 
-Сатира и фейский двор
-Сатира и фейский двор: Сатира предоставляет документ, который выдается всем гостям, но не указывает точную дату, до которой нужно гостить.
-Вопрос о том, насколько это легально, остается открытым.
-
-Обнаружение добра и зла
-Гайда может чувствовать добро и зло, но это требует концентрации и размышления.
-Гайда определяет, что от руб исходит аромат феи, хотя она изначально была эльфом.
-
-Мирай и ее состояние
-Мирай находится в состоянии алкогольного опьянения, но истощение остается.
-Гайда чувствует чужеродность от Мирай, несмотря на то, что она все еще человек.
-
-Обсуждение ситуации с феями
-Герои обсуждают ситуацию с феями и решают временно оставить труп феи с мисс Кляйн.
-Обсуждают, что труп феи может быть единственным представлением, которое феи имеют о них.
-
-Разговор о феях и их крыльях
-Герои обсуждают, что не все феи имеют крылья, и руб не может быть феей с крыльями.
-Настя спрашивает о механике игры или чего-то еще, но Леш не слышит ее.
-
-Обсуждение настроек звука
-Герои обсуждают, что у Насти громкость звука на ноуте может быть слишком низкой.
-Леш проверяет настройки звука на своем компьютере и увеличивает громкость.
-
-Гайда и Руб
-Гайда просит Руб подхватить ее, когда она перепрыгивает через пианино.
-Руб пытается перелезть через пианино, но Гайда успевает ее подхватить.
-Руб хмурится и говорит, что может ходить сама.
-
-Обращение в фею
-Руб становится феей после того, как выпивает зелье.
-Руб начинает превращаться в фею, и ее связь с планом фей усиливается.
-
-Спрайты и сатиры
-Руб просит спрайтов помочь ей сделать бомбу, чтобы прогнать сатиров.
-Спрайты предлагают использовать что-то неприятно пахнущее для сатиров.
-
-Передача яда
-Герой передает яд для поварихи, используя фрукты.
-Герой пытается найти гоблина, который занимается доставкой еды.
-
-Встреча с поварихой
-Герой передает фрукты поварихе и получает противоядие для себя.
-Герой обсуждает с поварихой, зачем ему противоядие.
-
-Поиск яда
-Герой ищет яд для гоблина, который может быть у гайда.
-Герой обсуждает с гайдом противоядие и как его использовать.
-
-Подготовка к отравлению
-Гайда готовит отравленное мясо, используя яд из пробирки.
-Он незаметно добавляет яд в мясо и прячет пробирку в рукаве.
-
-Отравление и последствия
-Гайда приносит отравленное мясо на банкетный стол.
-Повариха дает ему кисть, которая является ядовитой.
-Гайда использует кисть для отравления спрайтов в теплице.
-
-Подготовка к взрыву
-Гайда просит у тори бомбочку и использует ее для взрыва на втором этаже.
-Гайда открывает дверь магической рукой и закидывает бомбочку внутрь.
-
-##### тут боевика, вероятно надо много убрать
-Нейросеть YandexGPT сделала краткий пересказ видео
-Сессия 15.06.24 Часть 6
-Обсуждение способностей и действий
-Обсуждают способности и действия, связанные с аурой страха и крыльями.
-Упоминают, что способность видеть на расстоянии 10 футов может быть бредовой.
-
-Использование комплекта целителя
-Обсуждают использование комплекта целителя как большого зелья здоровья.
-Упоминают, что это возможно, но требует много времени.
-
-Гоблины и красная повариха
-Гоблины пытаются атаковать гайду, используя колющие и режущие предметы.
-Красная повариха смотрит на гайду и говорит, что он отправил кого-то.
-
-Битва с гоблинами
-Гайда получает удар по животу и кровотечение.
-Гоблин промахивается тесаком.
-Гайда использует магическую руку, чтобы открыть дверь и атаковать гоблина.
-
-Использование способностей
-Гайда использует пепел, чтобы нанести урон гоблину.
-Гайда использует божественную кару, чтобы нанести урон гоблину.
-
-Концентрация и временные хиты
-Гайда получает преимущество на выносливость и временные хиты.
-Гоблин пытается атаковать Гайда, но тот использует заклинание, чтобы отразить атаку.
-
-Битва с гоблинами
-Героиня сражается с гоблинами, используя различные заклинания и атаки.
-Она обсуждает с другими игроками, как лучше атаковать и уклоняться от атак.
-
-Волшебная стрела
-Героиня использует заклинание "волшебная стрела", которое наносит урон без цели.
-Она объясняет, что это заклинание не целится, а просто наносит урон.
-
-Метание копья
-Героиня обсуждает, как метать копье в гоблинов, учитывая их расположение и возможные помехи.
-Она также упоминает, что метание копья может прилететь по союзникам, если промахнется.
-
-Нейросеть YandexGPT сделала краткий пересказ видео
-Сессия 15.06.24 Часть 9
-Битва с гоблинами
-Руб использует психические клинки, чтобы ударить гоблина с тяжелым повреждением.
-Бардовское вдохновение можно использовать для бонусного действия.
-Руб телепортируется к гоблину и наносит урон.
-
-Использование оружия
-Руб решает использовать щит и молот.
-Щит имеет КД 20, так как это башенный щит.
-
-Спасброски и бардовское вдохновение
-Руб пытается сделать спасбросок смерти с помехой.
-Руб хочет использовать бардовское вдохновение на ксандре.
-
-Битва с гоблинами продолжается
-Руб защищает себя от гоблина, который отвлекает его.
-Руб наносит урон гоблину, который пытается его атаковать.
-Руб использует заклинание дальнобойное, чтобы нанести урон гоблину.
-
-Обсуждение стратегии и тактики
-Участники обсуждают использование кости, которая действует только в случае попадания и скила.
-Они также обсуждают, как использовать заготовленное действие, и как его можно использовать для лечения.
-
-Битва с каргой
-Участники обсуждают, как использовать клинок зеленого пламени, и как он работает.
-Они также обсуждают, как можно атаковать каргу и гоблина, и как это может повлиять на их здоровье.
-
-Завершение хода
-Участники обсуждают, как можно использовать перемещение, и как это может повлиять на их стратегию.
-Они также обсуждают, как можно ответить на вопросы других персонажей, и как это может повлиять на ход игры.
-
-Обсуждение стратегии и тактики
-В видео обсуждается стратегия и тактика в игре, включая использование преимуществ и выбор целей для атаки.
-Упоминается, что после получения преимущества, его можно использовать для атаки на конкретную цель.
-
-Завершение боя и обсуждение медицины
-В конце боя, обсуждается использование медицины для стабилизации и лечения персонажей.
-Упоминается черта "двойная медицина", которая позволяет использовать компоненты целителя для лечения.
-Обсуждается, что компоненты целителя стоят дороже, но могут быть использованы для улучшения состояния персонажей.
-
-
-Нейросеть YandexGPT сделала краткий пересказ видео
-Сессия 15.06.24 Часть 10
-Обсуждение способностей и заклинаний
-Обсуждение магического вдохновения, которое позволяет использовать кость бардовского вдохновения для нанесения дополнительного урона или восстановления здоровья.
-Гайда и Мира обсуждают, как использовать эту способность в бою.
-
-Сжигание руки и баррикады
-Гайда сжигает руку мертвой твари, которая пыталась отравить спрайтов.
-Руб и Гайда помогают Мирай подняться и уходят из комнаты.
-Руб замечает, что гоблин, который боялся Гайды, баррикадирует дверь.
-
-Завершение сцены
-Гайда и Мира уходят из комнаты, не обнаружив следов погрома.
-Обсуждается возможность продолжить игру или закончить сцену.
-В итоге, решают продолжить игру, но если все будут согласны.
-
+Достаточно подготовленный, Гайдо идёт к Поварихе. Она встречает его довольно радостно - вроде парень смелый, смышлёный. 
 
 ---
 >Следующая сессия: [[День 8. 50 лет спустя]] 
